feat: Implementação de docs para swagger. [controllers, dtos]
